# ogcalc

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  ogcalc.tex  qt4.ui
C/: Makefile.am  Makefile.in
C++/: Makefile.in
C++/glade/: Makefile.am  Makefile.in  ogcalc-main.cc  ogcalc.h
C++/plain/: Makefile.in  ogcalc-main.cc  ogcalc.cc
C/builder/: Makefile.in  ogcalc.b  ogcalc.glade
C/glade/: Makefile.am  Makefile.in  ogcalc.c
C/gobject/: Makefile.in  ogcalc.c
C/gobject-builder/: .gitignore  Makefile.am  Makefile.in  ogcalc.c  ogcalc.ui
C/gobject-glade/: Makefile.in  ogcalc.h
C/plain/: Makefile.am  Makefile.in  ogcalc.c
doc/: Makefile  conclusion.rst  conf.py  further.rst  gtk-c++.rst  gtk-c.rst  gtk-introduction.rst  gtk-python.rst  gtk-uisetup  gtk-uisetup.rst  index.rst  introduction.rst  ogcalc.rst  primer.rst  qt-building.rst  qt-c++.rst  qt-introduction.rst  qt-uisetup.rst  specification.rst
doc/figures/: container-hbox.fig  container-table.fig  container-vbox.fig  packing-1.fig  packing-4.fig  packing-final.fig  signals.fig
figures/: Makefile.am  Makefile.in  box-packing.fig  packing-2.fig  packing-3.fig  packing-5.fig  qt.ui  sketch.fig
gtk/: Makefile.am  configure.ac
gtk/C++/glade/: Makefile.am  configure.ac  ogcalc-main.cc  ogcalc.cc  ogcalc.glade  ogcalc.h
gtk/C++/plain/: Makefile.am  configure.ac  ogcalc-main.cc  ogcalc.cc  ogcalc.h
gtk/C/builder/: Makefile.am  configure.ac  ogcalc.c  ogcalc.ui
gtk/C/glade/: Makefile.am  configure.ac  ogcalc.c
gtk/C/gobject/: Makefile.am  configure.ac  ogcalc-main.c  ogcalc.c  ogcalc.glade  ogcalc.h
gtk/C/gobject-builder/: Makefile.am  configure.ac  ogcalc-main.c  ogcalc.c  ogcalc.h  ogcalc.ui
gtk/C/gobject-glade/: Makefile.am  configure.ac  ogcalc-main.c  ogcalc.c  ogcalc.h
gtk/C/plain/: Makefile.am  configure.ac  ogcalc.c
gtk/python/glade/: Makefile.am  ogcalc
gtk/python/plain/: ogcalc
python/: Makefile.am  Makefile.in
python/glade/: Makefile.in  ogcalc  ogcalc.gladep
python/plain/: Makefile.am  Makefile.in  ogcalc
qt/: .gitignore  Makefile.am  ogcalc.cpp  ogcalc.h  ogcalc.icns  ogcalc.ui
qt/am/: Makefile.am  SpinBoxEntry.cpp  ogcalc.cpp
qt/common/: SpinBoxEntry.cpp  SpinBoxEntry.h  main.cpp  ogcalc.rc  ogcalc.ui
qt/make/: Makefile  main.cpp  ogcalc.cpp  ogcalc.h
qt/plain/: Makefile.am
qt/plain/am/: .gitignore  Makefile.am  SpinBoxEntry.h  ogcalc.cpp  ogcalc.h  ogcalc.plist
qt/plain/automake/: Makefile.am  configure.ac
qt/plain/cmake/: .gitignore  CMakeLists.txt
qt/plain/common/: ogcalc.cpp  ogcalc.h
qt/plain/make/: Makefile  SpinBoxEntry.h
qt/plain/python/: ogcalc
qt/plain/qmake/: ogcalc.pro
qt/python/: SpinBoxEntry.py  ogcalc  ogcalc-ui  ogcalc-uic
qt/qmake/: SpinBoxEntry.h  ogcalc.h  ogcalc.pro  ogcalc.ui
qt/ui/am/: configure.ac  ogcalc.plist
qt/ui/automake/: .gitignore  Makefile.am  SpinBoxEntry.h  SpinBoxEntryPlugin.cpp  configure.ac  ogcalc.icns  ogcalc.rc
qt/ui/cmake/: .gitignore  CMakeLists.txt  SpinBoxEntry.cpp  SpinBoxEntryPlugin.h  SpinBoxEntryPlugin.json
qt/ui/common/: SpinBoxEntry.cpp  SpinBoxEntry.h  SpinBoxEntryPlugin.cpp  SpinBoxEntryPlugin.h  main.cpp  ogcalc.cpp  ogcalc.h  ogcalc.ui
qt/ui/python/: SpinBoxEntry.py  ogcalc
qt/uic/am/: Makefile.am  configure.ac  main.cpp  ogcalc.pro  ogcalc.ui
qt/uic/automake/: .gitignore  Makefile.am  configure.ac  ogcalc.ui
qt/uic/automake/ogcalc-qt-uic-automake-1.5.0/: configure.ac
qt/uic/cmake/: .gitignore  CMakeLists.txt
qt/uic/common/: ogcalc.cpp  ogcalc.h  ogcalc.ui
qt/uic/make/: Makefile
qt/uic/python/: Makefile  ogcalc
qt/uic/qmake/: SpinBoxEntry.cpp  ogcalc.cpp  ogcalc.pro
scripts/: .gitignore
