# ogcalc - a GTK+ program written in Python, but using libglade to
# construct the interface.

# The program to build.
noinst_SCRIPTS = ogcalc

# The Glade user interface files.
noinst_DATA = ogcalc.glade ogcalc.gladep

# Files not automatically distributed which should be included
# in the distribution tarball.
EXTRA_DIST = $(noinst_SCRIPTS) $(noinst_DATA)
